--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -17,7 +17,7 @@
     serviceName: "Check if you can apply for a water resource management grant",
     serviceUrl: "/"
   }) }}
-    <div class="govuk-grid-row govuk-width-container " ">
+    <div class="govuk-grid-row govuk-width-container">
       {{ govukPhaseBanner({
       tag: {
       text: "beta"
