--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -41,6 +41,10 @@
   {{ govukFooter({
     meta: {
       items: [
+      {
+          href: "/accessibility",
+          text: "Accessibility"
+        },
         {
           href: "/site-cookies",
           text: "Cookies"
