--- a/app/templates/accessibility.njk
+++ b/app/templates/accessibility.njk
@@ -15,7 +15,7 @@
       <h1 class="govuk-heading-l">Accessibility statement</h1>
       <p class="govuk-body">
         This service is run by Defra. We want as many people as possible to be able to use this website. 
-                        For example, that means you should be able to:
+        For example, that means you should be able to:
       </p>
       <ul class="govuk-list govuk-list--bullet">
         <li>change colours, contrast levels and fonts</li>
@@ -30,7 +30,7 @@
       <h2 class="govuk-heading-m">Reporting accessibility problems with this website</h2>
       <p class="govuk-body">
         We are always looking to improve the accessibility of this website. 
-                        If you find any problems not listed on this page or think we are not meeting the requirements of the accessibility regulations, contact us:
+        If you find any problems not listed on this page or think we are not meeting the requirements of the accessibility regulations, contact us:
       </p>
       <ul class="govuk-list govuk-list--bullet">
         <li>email:
@@ -48,7 +48,7 @@
       </p>
       <h2 class="govuk-heading-m">Technical information about this website’s accessibility</h2>
       <p class="govuk-body">
-        Parahgraph
+        Paragraph
       </p>
       <p class="govuk-body">
         This statement was prepared on #.
