--- a/app/templates/home.njk
+++ b/app/templates/home.njk
@@ -13,7 +13,7 @@
         href: "/"
       },
       {
-        text: "Check if you can apply for a water resource management grant",
+        text: "Check if you can apply for a Farming Transformation Fund water grant",
         href: "/"
       }
     ]
@@ -30,20 +30,14 @@
         <li>check how well your project fits the funding priorities (takes about 15 minutes if you have all the project details)</li>
       </ul>
       <p>If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.</p>
-      <h2 class="govuk-heading-s">Problems with the service</h2>  
-      <p>If you have any problems with the service, contact the RPA.</p> 
-      <p>Telephone: <b>03000 200 301</b></p> 
-      <p>Monday to Friday, 9am to 5pm (expect public holidays)</p> 
-      <a href="#">Find out about call charges</a> 
-      <p>Email: <a href="mailto:FTP@rpa.gov.uk">FTP@rpa.gov.uk</a></p>
+      
       {{ govukButton({
       classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8",
       href: button.nextLink,
       isStartButton: true,
       text: button.text
     }) }}
-
-      <h2 class="govuk-heading-m">Before you start</h2>
+     <h2 class="govuk-heading-m">Before you start</h2>
 
       <p>You need:</p>
       <ul class="govuk-list govuk-list--bullet">
@@ -51,6 +45,13 @@
         <li>information about the project (for example, irrigated land in hectares)</li>
         <li>estimate total cost of the items you need</li> 
       </ul>
+      <h2 class="govuk-heading-s">Problems with the service</h2>  
+      <p>If you have any problems with the service, contact the RPA.</p> 
+      <p>Telephone: <b>03000 200 301</b></p> 
+      <p>Monday to Friday, 9am to 5pm (except public holidays)</p> 
+      <p><a target="_blank" href="https://www.gov.uk/call-charges">Find out about call charges</a></p> 
+      <p>Email: <a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
+     
     </div>
   </div>
 {% endblock %}
