--- a/app/templates/service-unavailable.njk
+++ b/app/templates/service-unavailable.njk
@@ -13,7 +13,7 @@
         We saved your answers. They will be available for 30 days.
       </p>
       <p class="govuk-body"><a class="govuk-link" href="#">
-        Contact the FFC Gramts Service Helpline</a> if you need to make changes to your claim or speak to someone about your claim.
+        Contact the RPA Helpline</a> if you need to make changes to your claim or speak to someone about your claim.
       </p>
     </div>
   </div>
