--- a/app/templates/cookies/cookie-banner.njk
+++ b/app/templates/cookies/cookie-banner.njk
@@ -1,11 +1,11 @@
 {% from "govuk/components/cookie-banner/macro.njk" import govukCookieBanner %}
-
+{% from "../components/macro.njk" import crumbToken %}
 <noscript>
 {{ govukCookieBanner({
-  ariaLabel: "Cookies on Water Resource Management Grant",
+  ariaLabel: "Cookies on Farming Transformation Fund water grant",
   messages: [
     {
-      headingText: "Cookies on Water Resource Management Grant",
+      headingText: "Cookies on Farming Transformation Fund water grant",
       text: "We use cookies to make this service work and collect analytics information. To accept or reject cookies, turn on JavaScript in your browser settings or reload this page."
     }
   ]
@@ -13,8 +13,7 @@
 </noscript>
 
 <div class="js-cookies-container" style="display:none">
-  
-  <input type="hidden" id="crumbBanner" name="crumbBanner" value="{{crumb}}" />
+  {{ crumbToken(crumb)}}
   {% set html %}
     <p>We use some essential cookies to make this service work.</p>
     <p>We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
@@ -29,11 +28,11 @@
   {% endset %}
 
   {{ govukCookieBanner({
-    ariaLabel: "Cookies on Water Resource Management Grant",
+    ariaLabel: "Cookies on Farming Transformation Fund water grant",
     classes: "js-cookies-banner",
     messages: [
       {
-        headingText: "Cookies on Water Resource Management Grant",
+        headingText: "Cookies on Farming Transformation Fund water grant",
         html: html,
         classes: "js-question-banner",
         actions: [
