--- a/app/templates/not-found.njk
+++ b/app/templates/not-found.njk
@@ -11,7 +11,7 @@
         href: "/"
       },
       {
-        text: "Check if you can apply for a water resource management grant",
+        text: "Check if you can apply for a Farming Transformation Fund water grant",
         href: "/"
       }
     ]
