--- a/app/templates/confirm.njk
+++ b/app/templates/confirm.njk
@@ -15,7 +15,7 @@
 {% block content %}
     <div class="govuk-grid-column-two-thirds govuk-body">
       <h1 class="govuk-heading-l">Confirm and send</h1>
-<p>I confirm that, to the best of my knowledge, the deatils I have provided are correct.</p>
+<p>I confirm that, to the best of my knowledge, the details I have provided are correct.</p>
 <p>I understand the score was based on the answers I provided.</p>
 <p>I am aware the information I submit will be checked.</p>
 <p>So that we can continue to improve our services and schemes, we may wish to contact you in the future. Please confirm if you are happy for us, or a third party working for us, to contact you.</p>
