--- a/app/templates/confirm.njk
+++ b/app/templates/confirm.njk
@@ -33,7 +33,7 @@
   </div>
     <div class="govuk-grid-row govuk-body">
     <div class="govuk-grid-column-two-thirds">
-  <p>The Department for Environment, Food and Rural Affairs (Defra) is the data controller for personal data you give to RPA. For information on how we handle personal data go to GOV.UK and search</p>
+  <p>The Department for Environment, Food and Rural Affairs (Defra) is the data controller for personal data you give to RPA. For more information on how we handle personal data go to GOV.UK and search</p>
 <p>
 <a target="_blank" href="https://www.gov.uk/government/organisations/rural-payments-agency/about/personal-information-charter">Rural Payments Agency personal information charter.</a></p>
 </div>
