--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -17,7 +17,7 @@
 {% block header %}
   {{ govukHeader({
   homepageUrl: "/",
-  serviceName: "Check if you can apply for a water resource management grant",
+  serviceName: "Check if you can apply for a Farming Transformation Fund water grant",
   serviceUrl: "/"
   }) }}
   <div class="govuk-grid-row govuk-width-container">
