--- a/app/templates/confirm.njk
+++ b/app/templates/confirm.njk
@@ -2,7 +2,8 @@
 
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
-{% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
+{% from "./components/macro.njk" import crumbToken %}
 
 {% block beforeContent %}
   {{ govukBackLink({
@@ -12,15 +13,29 @@
 {% endblock %}
 
 {% block content %}
-  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds govuk-body">
+      <h1 class="govuk-heading-l">Confirm and send</h1>
+<p>I confirm that, to the best of my knowledge, the details I have provided are correct.</p>
+<p>I understand the score was based on the answers I provided.</p>
+<p>I am aware the information I submit will be checked.</p>
+<p>So that we can continue to improve our services and schemes, we may wish to contact you in the future. Please confirm if you are happy for us, or a third party working for us, to contact you.</p>
+</div>
+  <div class="govuk-grid-row govuk-body">
     <div class="govuk-grid-column-two-thirds">
       <form method="POST" action="/confirm" novalidate="novalidate">
-        <input type="hidden" name="crumb" value="{{crumb}}" />
-        {{ govukInput(inputConfirm) }}
+        {{ crumbToken(crumb)}}
+        {{ govukCheckboxes(checkboxConfirm) }}
         {{ govukButton({
-          text: "Continue"
+          text: "Confirm and send"
         }) }}
       </form>
     </div>
   </div>
+    <div class="govuk-grid-row govuk-body">
+    <div class="govuk-grid-column-two-thirds">
+  <p>The Department for Environment, Food and Rural Affairs (Defra) is the data controller for personal data you give to RPA. For information on how we handle personal data go to GOV.UK and search</p>
+<p>
+<a target="_blank" href="https://www.gov.uk/government/organisations/rural-payments-agency/about/personal-information-charter">Rural Payments Agency personal information charter.</a></p>
+</div>
+</div>
 {% endblock %}
