--- a/app/templates/components/macro.njk
+++ b/app/templates/components/macro.njk
@@ -1,4 +1,4 @@
 {% macro crumbToken(crumb) %}
-  <input type="hidden" name="crumb"
+  <input type="hidden" name="crumb" id="crumb"
          value="{{ crumb }}" />
 {% endmacro %}
