--- a/app/templates/project-items.njk
+++ b/app/templates/project-items.njk
@@ -15,10 +15,10 @@
 
 {% block content %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Which eligible items does your project need?</h1>
     <span id="project-items-hint" class="govuk-hint">
-      The minimum grant you can apply for is £35,000 (40% of £87,500).<br/>The maximum grant is £1 million.
+      Grants can cover up to 40% of the eligible costs of a project. The minimum grant you can apply for is £35,000 (40% of £87,500).<br/>The maximum grant is £1 million.
     </span>
       <form method="POST" action="/project-items" novalidate>
         {{ crumbToken(crumb)}}
