--- a/app/templates/cookies/cookie-banner.njk
+++ b/app/templates/cookies/cookie-banner.njk
@@ -13,7 +13,7 @@
 </noscript>
 
 <div class="js-cookies-container" style="display:none">
-  <input type="hidden" name="crumbBanner" id="crumbBanner" value={{crumb}}/>
+  <input type="hidden" name="crumbBanner" id="crumbBanner" value="{{crumb}}" />
   {% set html %}
     <p>We use some essential cookies to make this service work.</p>
     <p>We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
