--- a/app/templates/check-details.njk
+++ b/app/templates/check-details.njk
@@ -1,4 +1,4 @@
-{% extends '.layout.njk' %}
+z{% extends '.layout.njk' %}
 
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
