--- a/app/templates/irrigated-land.njk
+++ b/app/templates/irrigated-land.njk
@@ -15,7 +15,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="/irrigated-land" novalidate="novalidate">
+      <form method="POST" action="/irrigated-land" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukInput(currentInput) }}
         {{ govukInput(targetInput) }}
