--- a/app/templates/remaining-costs.njk
+++ b/app/templates/remaining-costs.njk
@@ -16,7 +16,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="/remaining-costs" novalidate="novalidate">
+      <form method="POST" action="/remaining-costs" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
         {{ govukButton({
