--- a/app/templates/SSSI.njk
+++ b/app/templates/SSSI.njk
@@ -13,7 +13,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="/SSSI" novalidate>
+      <form method="POST" action="/SSSI" autocomplete="off" novalidate>
         {{ crumbToken(crumb) }}
         {{ govukRadios(radios) }}
         {{ govukButton({
