--- a/app/templates/arable.njk
+++ b/app/templates/arable.njk
@@ -15,7 +15,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="/arable" novalidate>
+      <form method="POST" action="/arable" autocomplete="off" novalidate>
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
         {{ govukButton({
