--- a/app/templates/legal-status.njk
+++ b/app/templates/legal-status.njk
@@ -15,7 +15,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form method="POST" action="/legal-status" novalidate="novalidate">
+      <form method="POST" action="/legal-status" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
         {{ govukButton({
