--- a/app/templates/project-details.njk
+++ b/app/templates/project-details.njk
@@ -23,7 +23,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">Project details</h1>
-      <form method="POST" action="/project-details" novalidate="novalidate">
+      <form method="POST" action="/project-details" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukCheckboxes(checkboxes) }}
         {{ govukButton({
