--- a/app/templates/save-progress.njk
+++ b/app/templates/save-progress.njk
@@ -15,7 +15,7 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <form method="POST" action={{ actionLink }} novalidate>
+    <form method="POST" action={{ actionLink }} autocomplete="off" novalidate>
       {{ crumbToken(crumb)}}
       {{ govukRadios(radios) }}
       {{ govukButton({
