--- a/app/templates/score.njk
+++ b/app/templates/score.njk
@@ -107,7 +107,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <form method="POST" action="/score" novalidate>
+    <form method="POST" action="/score" autocomplete="off" novalidate>
       {{ crumbToken(crumb)}}
       {{ govukButton({
         text: "Continue"
