ticket /670 -> update content /start

--- a/app/templates/home.njk
+++ b/app/templates/home.njk
@@ -43,7 +43,7 @@
       <ul class="govuk-list govuk-list--bullet">
         <li>information about your business (for example, number of employees and turnover)</li>
         <li>information about the project (for example, irrigated land in hectares)</li>
-        <li>estimate total cost of the items you need</li> 
+        <li>an estimated total cost of the items you need</li> 
       </ul>
       <h2 class="govuk-heading-s">Problems with the service</h2>  
       <p>If you have any problems with the service, contact the RPA.</p> 
