--- a/app/templates/confirmation.njk
+++ b/app/templates/confirmation.njk
@@ -38,5 +38,5 @@
         <p><b>You will not automatically get a grant.</b> The grant is expected to be highly competitive and you are competing against other projects.</p>
     </div>
   </div>
-  <p class="govuk-body"><a href={{ output.surveyLink }}>What did you think of this service?</a></p>
+  <p class="govuk-body"><a href={{ output.surveyLink }} target="_blank" rel="noopener noreferrer">What did you think of this service?</a></p>
 {% endblock %}
