--- a/app/templates/confirm.njk
+++ b/app/templates/confirm.njk
@@ -35,7 +35,7 @@
     <div class="govuk-grid-column-two-thirds">
   <p>The Department for Environment, Food and Rural Affairs (Defra) is the data controller for personal data you give to RPA. For information on how we handle personal data go to GOV.UK and search</p>
 <p>
-<a target="_blank" href="https://www.gov.uk/government/organisations/rural-payments-agency/about/personal-information-charter" target="_blank" rel="noopener noreferrer">Rural Payments Agency personal information charter.</a></p>
+<a href="https://www.gov.uk/government/organisations/rural-payments-agency/about/personal-information-charter" target="_blank" rel="noopener noreferrer">Rural Payments Agency personal information charter.</a></p>
 </div>
 </div>
 {% endblock %}
